--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
       <div class="services-kicker">More services</div>
       <h2>Let’s See Our Latest Services</h2>
       <p class="tp_text_invert ">
-        At <strong>AINFANATI</strong>, we are continuously working on innovative projects 
+        At <strong>AINFANATI</strong>we are continuously working on innovative projects 
         to provide our clients with modern and effective solutions tailored to their needs.
       </p>
     </div>
