--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
               <ul>
                 <li><a href="index.html"><i class="fa-regular fa-arrow-right"></i> Home</a></li>
                 <li><a href="service.html"><i class="fa-regular fa-arrow-right"></i> Services</a></li>
-                <li><a href="#contact"><i class="fa-regular fa-arrow-right"></i> Contact</a></li>
+                <li><a href="contact.html"><i class="fa-regular fa-arrow-right"></i> Contact</a></li>
               </ul>
             </div>
           </div>
