--- a/service.html
+++ b/service.html
@@ -634,9 +634,9 @@
             <div class="tp-footer-4__widget footer-col-4-2">
               <h4 class="tp-footer-4__widget-title">Explore</h4>
               <ul>
-                <li><a href="#about"><i class="fa-regular fa-arrow-right"></i> About</a></li>
+                 <li><a href="index.html"><i class="fa-regular fa-arrow-right"></i> Home</a></li>
                 <li><a href="service.html"><i class="fa-regular fa-arrow-right"></i> Services</a></li>
-                <li><a href="#contact"><i class="fa-regular fa-arrow-right"></i> Contact</a></li>
+                <li><a href="contact.html"><i class="fa-regular fa-arrow-right"></i> Contact</a></li>
               </ul>
             </div>
           </div>
