--- a/contact.html
+++ b/contact.html
@@ -106,8 +106,8 @@
          <div class="tp-offcanvas-left">
             <div class="tp-offcanvas-left-wrap d-flex justify-content-between align-items-center">
                <div class="tpoffcanvas__logo">
-                  <img class="logo-white" src="assets/img/AINFANATI/logo/logo.png" alt="">
-                  <img class="logo-black" src="assets/img/AINFANATI/logo/logo-black.png" alt="">
+                  <img class="logo-white" src="assets/img/AINFANATI/logo/logo.svg" alt="">
+                  <img class="logo-black" src="assets/img/AINFANATI/logo/logo-dark.svg" alt="">
                </div>
                <div class="tp-offcanvas-close d-md-none text-end">
                   <button class="tp-offcanvas-close-btn tp-offcanvas-close-btn">
@@ -195,8 +195,8 @@
             <div class="row align-items-center">
                <div class="col-xl-2 col-lg-6 col-md-6 col-6">
                   <div class="tp-header-3__logo">
-                     <a class="logo-white" href="index.html"><img src="assets/img/AINFANATI/logo/logo.png" alt=""></a>
-                     <a class="logo-black" href="index.html"><img src="assets/img/AINFANATI/logo/logo-black.png" alt=""></a>
+                     <a class="logo-white" href="index.html"><img src="assets/img/AINFANATI/logo/logo.svg" alt=""></a>
+                     <a class="logo-black" href="index.html"><img src="assets/img/AINFANATI/logo/logo-dark.svg" alt=""></a>
                   </div>
                </div>
                <div class="col-xl-7 d-none d-xl-block">
@@ -269,8 +269,8 @@
             <div class="row align-items-center">
                <div class="col-xl-2 col-lg-6 col-md-6 col-6">
                   <div class="tp-header-3__logo">
-                     <a class="logo-white" href="index.html"><img src="assets/img/AINFANATI/logo/logo.png" alt=""></a>
-                     <a class="logo-black" href="index.html"><img src="assets/img/AINFANATI/logo/logo-black.png" alt=""></a>
+                     <a class="logo-white" href="index.html"><img src="assets/img/AINFANATI/logo/logo.svg" alt=""></a>
+                     <a class="logo-black" href="index.html"><img src="assets/img/AINFANATI/logo/logo-dark.svg" alt=""></a>
                   </div>
                </div>
                <div class="col-xl-7 d-none d-xl-block">
@@ -500,7 +500,7 @@
           <div class="col-xl-4 col-lg-4 col-md-8 mb-40">
             <div class="tp-footer-4__widget footer-col-4-1">
               <div class="tp-footer-4__logo">
-                <a href="index.html"><img src="assets/img/AINFANATI/logo/logo.png" alt=""></a>
+                <a href="index.html"><img src="assets/img/AINFANATI/logo/logo.svg" alt=""></a>
               </div>
               <div class="tp-footer-4__content">
                 <p>Feel free to reach out with questions <br> or inquiries.</p>
