--- a/service.html
+++ b/service.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="utf-8">
    <meta http-equiv="x-ua-compatible" content="ie=edge">
-   <title>Services</title>
+   <title>Home</title>
    <meta name="description" content="">
    <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -40,9 +40,20 @@
     <!-- Right Side -->
     <div class="tb-right">
       <div class="tb-social">
-        <a href="https://www.facebook.com/ainfanati" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/ainfanati" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/company/ainfanati" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+        <!-- <a href="" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a> -->
+      <span class="social-icon disabled" aria-label="Facebook">
+        <i class="fab fa-facebook-f"></i>
+      </span>
+      <span class="social-icon disabled" aria-label="Instagram">
+        <i class="fab fa-instagram"></i>
+      </span>
+      <span class="social-icon disabled" aria-label="LinkedIn">
+        <i class="fab fa-linkedin-in"></i>
+      </span>
+    
+
       </div>
       <a href="tel:+971569929301" class="tb-call">
         <i class="fa-solid fa-phone"></i>
@@ -164,18 +175,20 @@
                         hello  YAFEA@ainfanati.ae </a>
                   </div>
                   <div class="tpoffcanvas__text">
+                    <a href="contact.html">
                      <p>Contact Us.</p>
+                     </a>
                   </div>
                </div>
                
-               <div class="tpoffcanvas__social-link">
+               <!-- <div class="tpoffcanvas__social-link">
                   <ul>
                      <li><a href="#">Dribbble</a></li>
                      <li><a href="#">Instagram</a></li>
                      <li><a href="#">Linkedin</a></li>
                      <li><a href="#">Behance</a></li>
                   </ul>
-               </div>
+               </div> -->
             </div>
          </div>
       </div>
@@ -495,6 +508,30 @@
             </div>
           </div>
 
+          <!-- Auditing Services -->
+          <div class="tp-service-3__item d-flex align-items-start mb-25 services-panel">
+            <div class="tp-service-3__icon">
+              <span>
+                <!-- receipt/checklist (audit) -->
+                <svg width="50" height="50" viewBox="0 0 24 24" fill="none"
+                    xmlns="http://www.w3.org/2000/svg" stroke="#002048" stroke-width="2">
+                  <rect x="4" y="2" width="16" height="20" rx="2"/>
+                  <path d="M8 7h7M8 11h7M8 15h4"/>
+                  <path d="M16.5 15.5l2.5 2.5"/>
+                  <circle cx="15" cy="14" r="2"/>
+                </svg>
+              </span>
+            </div>
+            <div class="tp-service-3__content">
+              <h3 class="tp-service-3__content-title">Auditing Services</h3>
+              <p>
+                We provide comprehensive auditing services that ensure the accuracy and integrity
+                of your financial statements using up-to-date techniques and technology for a
+                thorough and efficient audit.
+              </p>
+            </div>
+          </div>
+
         </div>
       </div>
 
@@ -569,7 +606,6 @@
 
 
      </main>
-  
 <footer>
 
   <!-- footer area start -->
@@ -588,17 +624,7 @@
               <div class="tp-footer-4__content">
                 <p>Feel free to reach out with questions <br> or inquiries.</p>
               </div>
-              <div class="tp-footer-4__social">
-                <!-- Website -->
-                <a href="https://www.ainfanati.ae" target="_blank" rel="noopener">
-                  <span>
-                    <svg width="17" height="11" viewBox="0 0 17 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M1 5.50008H6.25009C7.52511 5.50008 8.50013 6.47509 8.50013 7.75012C8.50013 9.02514 7.52511 10.0002 6.25009 10.0002H1.75001C1.30001 10.0002 1 9.70015 1 9.25014V1.75001C1 1.30001 1.30001 1 1.75001 1H5.50008C6.7751 1 7.75012 1.97502 7.75012 3.25004C7.75012 4.52506 6.7751 5.50008 5.50008 5.50008H1Z" stroke="currentcolor" stroke-width="1.5" stroke-miterlimit="10"/>
-                      <path d="M9.99988 7.00005H16C16 5.35002 14.65 4 12.9999 4C11.3499 4 9.99988 5.35002 9.99988 7.00005ZM9.99988 7.00005C9.99988 8.65008 11.3499 10.0001 12.9999 10.0001H14.275" stroke="currentcolor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                      <path d="M14.1249 2.125H11.8749" stroke="currentcolor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
-                  </span>
-                </a>
+              <div class="tp-footer-4__social">           
                 <!-- Email -->
                 <a href="mailto:YAFEA@ainfanati.ae">
                   <span>
@@ -608,8 +634,8 @@
                     </svg>
                   </span>
                 </a>
-                <!-- WhatsApp -->
-                <a href="https://wa.me/971569929301" target="_blank" rel="noopener">
+                <!-- Website -->
+                <a href="https://www.ainfanati.ae" target="_blank" rel="noopener">
                   <span>
                     <svg width="18" height="17" viewBox="0 0 18 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M2.50589 12.2494C4.57662 15.836 9.16278 17.0648 12.7494 14.9941C14.2113 14.15 15.2816 12.888 15.8962 11.4461C16.7895 9.35066 16.7208 6.87526 15.4941 4.75063C14.2674 2.62599 12.1581 1.32872 9.89669 1.05462C8.34063 0.866 6.71259 1.16183 5.25063 2.00589C1.66403 4.07662 0.435172 8.66278 2.50589 12.2494Z" stroke="currentcolor" stroke-width="1.5"/>
@@ -617,15 +643,23 @@
                     </svg>
                   </span>
                 </a>
-                <!-- Phone -->
-                <a href="tel:+971569929301">
-                  <span>
-                    <svg width="18" height="14" viewBox="0 0 18 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                      <path d="M12.75 13H5.25C3 13 1.5 11.5 1.5 9.25V4.75C1.5 2.5 3 1 5.25 1H12.75C15 1 16.5 2.5 16.5 4.75V9.25C16.5 11.5 15 13 12.75 13Z" stroke="currentcolor" stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
-                      <path d="M8.70822 5.14898L10.802 6.40526C11.5558 6.90777 11.5558 7.66154 10.802 8.16405L8.70822 9.42033C7.8707 9.92285 7.20068 9.50409 7.20068 8.58281V6.07025C7.20068 4.98147 7.8707 4.64646 8.70822 5.14898Z" fill="currentcolor"/>
+                <!-- WhatsApp -->
+                <a href="https://wa.me/971569929301" target="_blank" rel="noopener" aria-label="WhatsApp" class="btn-circle">
+                  <span class="icon">
+                    <svg width="20" height="20" viewBox="0 0 32 32" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                      <!-- دائرة داخلية للرمز -->
+                      <circle cx="16" cy="16" r="12.5"
+                              stroke="currentColor" stroke-width="1.5"
+                              vector-effect="non-scaling-stroke" />
+                      <!-- رمز واتساب -->
+                      <path d="M20.7 17.6c-.33-.16-1.9-.93-2.19-1.04-.29-.11-.49-.17-.7.12-.21.29-.79.97-.96 1.16-.17.2-.34.22-.64.1-.3-.13-1.25-.37-2.37-1.26-.93-.78-1.55-1.73-1.72-2.01-.17-.29-.02-.46.15-.62.16-.16.36-.4.53-.61.17-.21.22-.36.33-.6.11-.24.06-.45-.03-.63-.09-.18-.67-1.8-.92-2.45-.24-.63-.5-.55-.68-.56l-.6-.02c-.24 0-.55.09-.82.39-.27.3-1.1 1.12-1.1 2.72 0 1.6 1.14 3.14 1.34 3.36 .2.22 2.37 3.61 5.82 5.03 .82.34 1.46.55 1.95.69 .83.25 1.59.22 2.18.14 .66-.09 1.87-.78 2.11-1.54 .24-.76.24-1.41.17-1.54-.08-.13-.29-.2-.61-.35Z"
+                            fill="currentColor"/>
                     </svg>
                   </span>
                 </a>
+
+
               </div>
             </div>
           </div>
@@ -634,7 +668,7 @@
             <div class="tp-footer-4__widget footer-col-4-2">
               <h4 class="tp-footer-4__widget-title">Explore</h4>
               <ul>
-                 <li><a href="index.html"><i class="fa-regular fa-arrow-right"></i> Home</a></li>
+                <li><a href="index.html"><i class="fa-regular fa-arrow-right"></i> Home</a></li>
                 <li><a href="service.html"><i class="fa-regular fa-arrow-right"></i> Services</a></li>
                 <li><a href="contact.html"><i class="fa-regular fa-arrow-right"></i> Contact</a></li>
               </ul>
@@ -686,6 +720,7 @@
   </div>
 
 </footer>
+
 
 
 
