--- a/contact.html
+++ b/contact.html
@@ -619,29 +619,42 @@
       </div>
    </div>
 
+<!-- JS here -->
+
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const loader = document.getElementById('loading');
+    if (loader) {
+      loader.style.opacity = '0';
+      loader.style.pointerEvents = 'none';
+      setTimeout(() => loader.remove(), 300);
+    }
+  });
+</script>
+
    <!-- JS here -->
    <script src="assets/js/vendor/jquery.js"></script>
    <script src="assets/js/bootstrap-bundle.js"></script>
-   <script src="assets/js/three.js"></script>
+   <!-- <script src="assets/js/three.js"></script> -->
    <script src="assets/js/gsap.js"></script>
    <script src="assets/js/gsap-scroll-smoother.js"></script>
    <script src="assets/js/gsap-scroll-trigger.js"></script>
    <script src="assets/js/gsap-scroll-to-plugin.js"></script>
    <script src="assets/js/gsap-split-text.js"></script>
-   <script src="assets/js/webgl.js"></script>
+   <!-- <script src="assets/js/webgl.js"></script> -->
 
    <script src="assets/js/swiper-bundle.js"></script>
    <script src="assets/js/slick.js"></script>
    <script src="assets/js/wow.js"></script>
-   <script src="assets/js/pagepiling.js"></script>
-   <script src="assets/js/headroom.min.js"></script>
+   <!-- <script src="assets/js/pagepiling.js"></script> -->
+   <!-- <script src="assets/js/headroom.min.js"></script> -->
    <script src="assets/js/magnific-popup.js"></script>
    <script src="assets/js/nice-select.js"></script>
    <script src="assets/js/purecounter.js"></script>
-   <script src="assets/js/hammer.js"></script>
-   <script src="assets/js/matter.js"></script>
-   <script src="assets/js/throwable.js"></script>
-   <script src="assets/js/isotope-pkgd.js"></script>
+   <!-- <script src="assets/js/hammer.js"></script> -->
+   <!-- <script src="assets/js/matter.js"></script> -->
+   <!-- <script src="assets/js/throwable.js"></script> -->
+   <!-- <script src="assets/js/isotope-pkgd.js"></script> -->
    <script src="assets/js/imagesloaded-pkgd.js"></script>
    <script src="assets/js/ajax-form.js"></script>
 
@@ -650,6 +663,8 @@
    <script src="assets/js/main.js"></script>
    <script src="assets/js/tp-cursor.js"></script>
 
+
+   
 </body>
 
 </html>
