--- a/service.html
+++ b/service.html
@@ -509,10 +509,11 @@
           </div>
 
           <!-- Auditing Services -->
+      
           <div class="tp-service-3__item d-flex align-items-start mb-25 services-panel">
             <div class="tp-service-3__icon">
               <span>
-                <!-- receipt/checklist (audit) -->
+                 <!-- receipt/checklist (audit) -->
                 <svg width="50" height="50" viewBox="0 0 24 24" fill="none"
                     xmlns="http://www.w3.org/2000/svg" stroke="#002048" stroke-width="2">
                   <rect x="4" y="2" width="16" height="20" rx="2"/>
@@ -524,11 +525,9 @@
             </div>
             <div class="tp-service-3__content">
               <h3 class="tp-service-3__content-title">Auditing Services</h3>
-              <p>
-                We provide comprehensive auditing services that ensure the accuracy and integrity
+              <p> We provide comprehensive auditing services that ensure the accuracy and integrity
                 of your financial statements using up-to-date techniques and technology for a
-                thorough and efficient audit.
-              </p>
+                thorough and efficient audit.</p>
             </div>
           </div>
 
@@ -729,28 +728,41 @@
 
    
    <!-- JS here -->
+  
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const loader = document.getElementById('loading');
+    if (loader) {
+      loader.style.opacity = '0';
+      loader.style.pointerEvents = 'none';
+      setTimeout(() => loader.remove(), 300);
+    }
+  });
+</script>
+
+   <!-- JS here -->
    <script src="assets/js/vendor/jquery.js"></script>
    <script src="assets/js/bootstrap-bundle.js"></script>
-   <script src="assets/js/three.js"></script>
+   <!-- <script src="assets/js/three.js"></script> -->
    <script src="assets/js/gsap.js"></script>
    <script src="assets/js/gsap-scroll-smoother.js"></script>
    <script src="assets/js/gsap-scroll-trigger.js"></script>
    <script src="assets/js/gsap-scroll-to-plugin.js"></script>
    <script src="assets/js/gsap-split-text.js"></script>
-   <script src="assets/js/webgl.js"></script>
+   <!-- <script src="assets/js/webgl.js"></script> -->
 
    <script src="assets/js/swiper-bundle.js"></script>
    <script src="assets/js/slick.js"></script>
    <script src="assets/js/wow.js"></script>
-   <script src="assets/js/pagepiling.js"></script>
-   <script src="assets/js/headroom.min.js"></script>
+   <!-- <script src="assets/js/pagepiling.js"></script> -->
+   <!-- <script src="assets/js/headroom.min.js"></script> -->
    <script src="assets/js/magnific-popup.js"></script>
    <script src="assets/js/nice-select.js"></script>
    <script src="assets/js/purecounter.js"></script>
-   <script src="assets/js/hammer.js"></script>
-   <script src="assets/js/matter.js"></script>
-   <script src="assets/js/throwable.js"></script>
-   <script src="assets/js/isotope-pkgd.js"></script>
+   <!-- <script src="assets/js/hammer.js"></script> -->
+   <!-- <script src="assets/js/matter.js"></script> -->
+   <!-- <script src="assets/js/throwable.js"></script> -->
+   <!-- <script src="assets/js/isotope-pkgd.js"></script> -->
    <script src="assets/js/imagesloaded-pkgd.js"></script>
    <script src="assets/js/ajax-form.js"></script>
 
@@ -773,6 +785,8 @@
   document.fonts && document.fonts.ready && document.fonts.ready.then(setTopbarHeight);
 })();
 </script>
+
+   
 
    
 
